# Plan_De_Bille_DoseWater_PETG_Inox_PETG_60

./: CMakeLists.txt  init_vis.mac  run.mac  vis.mac
README/16_12_2025/: analyse_dose_geant4_PETG_Inox_PETG_60.aux  analyse_dose_geant4_PETG_Inox_PETG_60.blg  analyse_dose_geant4_PETG_Inox_PETG_60.out  analyse_dose_geant4_PETG_Inox_PETG_60.tex  analyse_dose_geant4_PETG_Inox_PETG_60.toc  rapport_comparaison_WPETG_Inox.tex  sandwich_wpetg_inox_tikz.tex
geant4_billes/include/: EventAction.hh
geant4_billes/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
include/: DetectorConstruction.hh  RunAction.hh  SteppingAction.hh
src/: EventAction.cc
